# CamillaDSP-Monitor

./: .gitignore  0-1-Width-Mono.yml  0-2-PhaseInvert-Right.yml  0-2-Width-Swapped.yml  0-3-PhaseInvert-Both.yml  1-1-MSProc-On.yml  1-3-CrossFeed-L3.yml  2-1-EQ-Headphone.yml  2-1-PhaseInvert-Left.yml  2-2-EQ-Room.yml  2-2-PhaseInvert-Right.yml  2-3-PhaseInvert-Both.yml  3-0-Loudness-Off.yml  3-1-CrossFeed-L1.yml  3-1-Loudness-On.yml  3-2-CrossFeed-L2.yml  3-3-CrossFeed-L3.yml  3-4-CrossFeed-L4.yml  3-5-CrossFeed-L5.yml  4-1-DCProtection-On.yml  4-1-EQ-Headphone.yml  4-2-EQ-Room.yml  5-1-Loudness-On.yml  5-2-Emphasis-Pre-emphasis.yml  6-1-Emphasis-DeEmphasis.yml  6-2-Emphasis-PreEmphasis.yml  7-1-DCProtection-On.yml  Info.plist  LICENSE  Makefile  NOTICES  Package.swift  README.md  entitlements.plist  monitor.py  monitorgui.py  processing.py  setting.yml  spectrum.py  spectrum.yml  (+2 more)
.github/workflows/: release.yml
RustBridge/: Cargo.toml  build.rs
RustBridge/src/: api.udl  engine.rs  lib.rs  spectrum.rs  types.rs
Sources/CamillaDSPLib/: CamillaDSP.swift  RustDSPEngine.swift  SwiftDSPEngine.swift
Sources/CamillaDSPMonitor/: CamillaDSPMonitorApp.swift
Sources/DSPCLI/: main.swift
Sources/DSPLib/: DSPEngine.swift  RustDSPEngine.swift  SwiftDSPEngine.swift
Sources/DSPMonitor/: DSPMonitorApp.swift
Tests/CamillaDSPLibTests/: AudioBuffersTests.swift  AudioHistoryBufferTests.swift  AudioStateTests.swift  BiquadTests.swift  BluesteinFFTTests.swift  CalibrationFileTests.swift  ConfigurationTests.swift  ConvolutionTests.swift  DoPEncoder.swift  DoPTests.swift  FIRDesignTests.swift  FilterBenchmarkTests.swift  FilterComparisonTests.swift  GainAndVolumeFilterTests.swift  MixedRadixFFTTests.swift  MixerTests.swift  PEQAutoFitTests.swift  PipelineTests.swift  RateControllerTests.swift  ResamplerBenchmarkTests.swift  ResamplerComparisonMatrix.swift  ResamplerComparisonTests.swift  ResamplerCorrectnessTests.swift  ResamplerCrossLanguagePerfTests.swift  ResamplerRateMatrixTests.swift  RubatoHarness.swift  SPSCPrimitivesTests.swift  SampleFormatTests.swift  SigmaDeltaModulator.swift  SilenceCounterTests.swift  SpectrumAnalyzerTests.swift  TargetCurveTests.swift  WindowFunctionTests.swift
Tests/DSPMonitorTests/: AudioHistoryBufferTests.swift  AudioStateTests.swift  BiquadComboTests.swift  BiquadTests.swift  BluesteinFFTTests.swift  ConfigurationTests.swift  ConvolutionTests.swift  DelayTests.swift  DiffEqTests.swift  DitherTests.swift  DoPBenchmarkTests.swift  DoPEncoder.swift  FilterComparisonTests.swift  GainAndVolumeFilterTests.swift  HotPathAllocationTests.swift  LimiterTests.swift  LookaheadLimiterTests.swift  MixerTests.swift  (+9 more)
Tests/RustHarnesses/: Cargo.toml
Tests/RustHarnesses/cdsp_filter_compare/: Cargo.toml
Tests/RustHarnesses/cdsp_filter_compare/src/: main.rs
Tests/RustHarnesses/cdsp_resampler_compare/: Cargo.toml
Tests/RustHarnesses/cdsp_resampler_compare/src/: main.rs
docs/: RoomCorrection-Plan.md
(+207 files in other folders)
