[package]
name = "camilladsp-ffi"
version = "0.1.0"
edition = "2021"

[dependencies]
CamillaDSP = { git = "https://github.com/HEnquist/camilladsp", branch = "next4.2.0" }
uniffi = { version = "0.31", features = ["cli"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
parking_lot = "0.12"
crossbeam-channel = "0.5"
realfft = "3.5"
num-complex = "0.4"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[lib]
name = "camilladsp_ffi"
crate-type = ["staticlib", "cdylib"]
