[package]
name = "cdsp_filter_compare"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
# Pinned to a specific upstream camilladsp commit so the filter-comparison
# harness stays reproducible. Cargo resolves the package by its `name`
# (CamillaDSP) but exposes the lib target as `camillalib` per the upstream
# Cargo.toml. Bump the rev when filters are re-validated against a newer cut.
CamillaDSP = { git = "https://github.com/HEnquist/camilladsp.git", rev = "e399fb91804aeec2141541f07e19b04f87887c91" }
serde_json = "1.0"

[[bin]]
name = "cdsp_filter_compare"
path = "src/main.rs"
